--- a/.buildkite/pipeline.cluster.yml
+++ b/.buildkite/pipeline.cluster.yml
@@ -2,5 +2,7 @@ steps:
   - label: ":k8s:"
     commands:
       - test/cluster/cluster-test.sh
+    artifact_paths: ./*.png;./*.mp4;./*.log
     concurrency: 1
     concurrency_group: "cluster-test"
+
