Add timeout and backoff to working branch

--- a/.buildkite/pipeline.cluster.yml
+++ b/.buildkite/pipeline.cluster.yml
@@ -5,4 +5,5 @@ steps:
     artifact_paths: ./*.png;./*.mp4;./*.log
     concurrency: 1
     concurrency_group: "cluster-test"
+    timeout_in_minutes: 60
 
